Spacing fixes in landing page

--- a/Angular Frontend/src/app/landing/landing.component.css
+++ b/Angular Frontend/src/app/landing/landing.component.css
@@ -23,7 +23,7 @@ p{
 
 .grid-container2 {
     grid-gap: 20px;
-    margin-top: 8vw;
+    margin-top: 2vw;
     margin-bottom: 2vw;
     background-color: lavender;
   }
